# pydantic-in-action

./: .gitignore  Makefile  README.md  pydantic01.ipynb  pyproject.toml
