[tool.poetry]
name = "pydantic-in-action"
version = "0.1.0"
description = ""
authors = ["aadehamid <aadehamid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
rich = "^13.6.0"
pytest = "^7.4.2"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
sh = "^2.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
